# ROBIN

./: .gitattributes  .gitignore  .gitmodules  404.html  CHANGELOG.md  CHANGES.md  LICENSE.txt  README.md  assets.json  cnsmeth.yml  config.ini  design.md  docs_design.md  index.html  install_r_packages.R  mkdocs.beta.yml  mkdocs.yml  pyproject.toml  robin.yml  robin_0_2.yml  robin_dev.yml  robin_osx.yml  robin_osx_dev.yml  setup_models_api.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md  support_question.md
.github/workflows/: auto-summarize-commits.yml  deploy-docs.yml  mkdocs-beta.yml  mkdocs.yml  validate-branches.yml
beta/: 404.html  index.html  sitemap.xml
beta/cli/: index.html
beta/cli/jobs/: index.html
beta/cli/panels/: index.html
beta/cli/password/: index.html
beta/cli/utils/: index.html
beta/cli/workflow/: index.html
beta/getting-started/installation/: index.html
beta/getting-started/library-preparation/: index.html
beta/getting-started/minknow-configuration/: index.html
beta/getting-started/quickstart/: index.html
beta/getting-started/startup/: index.html
beta/releases/v0.5/: index.html
beta/search/: search_index.json
beta/stylesheets/: beta.css
beta/using-robin/: index.html
beta/using-robin/authentication-and-layout/: index.html
beta/using-robin/pages-and-routes/: index.html
beta/using-robin/sample-results/: index.html
beta/using-robin/troubleshooting/: index.html
cli/: index.html
cli/jobs/: index.html
cli/panels/: index.html
cli/password/: index.html
cli/utils/: index.html
cli/workflow/: index.html
docs/: index.html  index.md
docs/cli/: index.md  panels.md  utils.md  workflow.md
docs/getting-started/: installation.md  library-preparation.md  minknow-configuration.md  quickstart.md  startup.md
docs/releases/: v0.5.md
docs/stylesheets/: extra.css
docs/using-robin/: authentication-and-layout.md  index.md  pages-and-routes.md  sample-results.md  troubleshooting.md
getting-started/installation/: index.html
getting-started/library-preparation/: index.html
getting-started/minknow-configuration/: index.html
getting-started/quickstart/: index.html
getting-started/startup/: index.html
releases/v0.5/: index.html
search/: search_index.json
src/cnsmeth/: CNSstartup.py  CrossNN_worker.py  RCNS2_worker.py  Sturgeon_worker.py  __about__.py  bam_handler.py  brain_class.py  copy_number_component.py  fusion_panel.py  local_file_picker.py  main.py  template_file.py  theme.py  utils.py
src/cnsmeth/minknow_info/: minKNOWhistograms.py  minknow_info.py  minknow_panel.py
src/cnsmeth/reporting/: generate_report.py
src/cnsmeth/resources/: clinvar.vcf  gencode.v45.basic.annotation.gff3
src/cnsmeth/static/: styles.css
src/cnsmeth/subpages/: CNV_object.py  Fusion_object.py  MGMT_object.py  NanoDX_object.py  RandomForest_object.py  SNPview.py  Sturgeon_object.py  TargetCoverage_object.py  base_analysis.py  copy_number_component.py  fusion_panel.py  mgmt_panel.py  target_coverage.py  template_object.py
src/cnsmeth/utilities/: ReadBam.py  bam_handler.py  local_file_picker.py  merge_bedmethyl.py
src/methnicegui/: RCNS2_worker.py  Sturgeon_worker.py  bam_handler.py  brain_class.py  brainmeth.py  cnv_sorter.py  copy_number_component.py  fusion_panel.py  local_file_picker.py  main2.py  merge_bedmethyl.py  mgmt_panel.py  target_coverage.py  template_file.py  theme.py
src/methnicegui/resources/: subset_gencode.v45.annotation.gff3
src/robin/: __about__.py  __init__.py  bed_file.py  brain_class.py  cli.py  gui_launcher.py  main.py  template_file.py  theme.py  utils.py  workflow_ray.py  workflow_simple.py
src/robin/analysis/: bed_conversion.py  cnv_analysis.py  fusion_analysis.py  fusion_work.py  master_bed_generator.py  master_csv_manager.py  target_analysis.py  temp_utilities.py
src/robin/core/: brain.py  config.py  metrics.py  state.py  storage.py
src/robin/gui/: theme.py
src/robin/minknow_info/: minKNOWhistograms.py  minknow_info.py  minknow_panel.py  sample_setup.py
src/robin/reporting/: __init__.py  cli.py  fonts.py  generate_report.py  header_footer.py  main.py  pdf_extractor.py  plotting.py  report.py  report2.py  report3.py  report_config.py  utils.py
src/robin/resources/: assets.json
src/robin/static/: header.html  styles.css
src/robin/subpages/: CNVObjectClass.py  CNV_object.py  FusionObjectClass.py  Fusion_object.py  Fusion_object_original.py  MGMT_object.py  MNPFlex_object.py  NanoDX_object.py  RandomForest_object.py  SNPview.py  Sturgeon_object.py  Sturgeon_object.py_old  TargetCoverage_object.py  base_analysis.py  template_object.py
src/robin/utilities/: ReadBam.py  bam_handler.py  bed_file.py  break_point_detector.py  camera.py  decompress.py  local_file_picker.py  merge_bedmethyl.py  mnp_flex.py  news_feed.py  performance_metrics.py  telemetry.py  watchlist_manager.py
src/robin/utils/: model_updater.py
tests/cnv_tests/: test_cnv.py
tests/static/: sort.test.bam.csi
tests/static/bam/: test_set.hg38.aa.sam.bam  test_set.hg38.aa.sam.bam.csi  test_set.hg38.ab.sam.bam  test_set.hg38.ab.sam.bam.csi  test_set.hg38.ac.sam.bam  test_set.hg38.ac.sam.bam.csi  test_set.hg38.ad.sam.bam  test_set.hg38.ad.sam.bam.csi  test_set.hg38.ae.sam.bam  test_set.hg38.ae.sam.bam.csi  test_set.hg38.af.sam.bam  test_set.hg38.af.sam.bam.csi  test_set.hg38.ag.sam.bam  test_set.hg38.ag.sam.bam.csi  test_set.hg38.ah.sam.bam  test_set.hg38.ah.sam.bam.csi  test_set.hg38.ai.sam.bam  test_set.hg38.ai.sam.bam.csi  test_set.hg38.aj.sam.bam  test_set.hg38.aj.sam.bam.csi  test_set.hg38.ak.sam.bam  test_set.hg38.ak.sam.bam.csi  test_set.hg38.al.sam.bam  test_set.hg38.al.sam.bam.csi  test_set.hg38.am.sam.bam  test_set.hg38.am.sam.bam.csi  test_set.hg38.an.sam.bam  test_set.hg38.an.sam.bam.csi  test_set.hg38.ao.sam.bam  test_set.hg38.ao.sam.bam.csi  test_set.hg38.ap.sam.bam  (+43 more)
using-robin/: index.html
using-robin/authentication-and-layout/: index.html
using-robin/pages-and-routes/: index.html
using-robin/sample-results/: index.html
using-robin/troubleshooting/: index.html
(+45 files in other folders)
