[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "methnicegui"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matt Loose", email = "matt.loose@nottingham.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "niceGUI",
  "click",
  "flet",
  "cnv_from_bam",
  "watchdog",
  "pysam",
  "pandas",
  "sturgeon@git+https://github.com/marcpaga/sturgeon",
  "methylartist@git+https://github.com/mattloose/methylartist",
  "natsort",
  "pywebview",
]

[project.scripts]
cnsmeth = "methnicegui.main2:package_run"

[project.urls]
Documentation = "https://github.com/unknown/methnicegui#readme"
Issues = "https://github.com/unknown/methnicegui/issues"
Source = "https://github.com/unknown/methnicegui"

[tool.hatch.version]
path = "src/methnicegui/__about__.py"

[tool.hatch.metadata]
allow-direct-references=true

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/methnicegui tests}"

[tool.coverage.run]
source_pkgs = ["methnicegui", "tests"]
branch = true
parallel = true
omit = [
  "src/methnicegui/__about__.py",
]

[tool.coverage.paths]
methnicegui = ["src/methnicegui", "*/methnicegui/src/methnicegui"]
tests = ["tests", "*/methnicegui/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
