[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robin"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Matt Loose", email = "matt.loose@nottingham.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "niceGUI",
  "click",
  "flet",
  "cnv_from_bam",
  "watchdog",
  "pysam",
  "pandas",
  "readfish",
  "sturgeon@git+https://github.com/looselab/sturgeon",
  "methylartist@git+https://github.com/mattloose/methylartist",
  "tqdm",
  "gff3_parser",
  "dna_features_viewer",
  "natsort",
  "reportlab",
  "icecream",
  "psutil",
  "ruptures",
  "pywebview",
  "torch==1.12.1",
  "scikit-learn",
  "yappi",
  "tabulate",
  "networkx",
  "docker",
  "opencv-python"
]

[project.scripts]
robin = "robin.main:package_run"

[project.urls]
Documentation = "https://github.com/unknown/robin#readme"
Issues = "https://github.com/unknown/robin/issues"
Source = "https://github.com/unknown/robin"

[tool.hatch.version]
path = "src/robin/__about__.py"

[tool.hatch.metadata]
allow-direct-references=true

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-asyncio",
  "pytest-selenium",
  "selenium",
  "icecream",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "-coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/robin tests}"

[tool.coverage.run]
source_pkgs = ["robin", "tests"]
branch = true
parallel = true
omit = [
  "src/robin/__about__.py",
]

[tool.coverage.paths]
robin = ["src/robin", "*/robin/src/robin"]
tests = ["tests", "*/robin/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
